Fix alignment of ui elements

--- a/client/src/components/Guages/Guages.scss
+++ b/client/src/components/Guages/Guages.scss
@@ -48,6 +48,7 @@
 .NosGauge-border {
   box-sizing: border-box;
   display: flex;
+  align-self: center;
   align-content: center;
   justify-content: center;
   box-shadow: inset 0 0 70px rgba(45, 33, 128, 0.8),
@@ -70,13 +71,6 @@
     0px 0px 20px 2px rgba(55, 223, 136, 0.2);
 }
 
-.CarGauge-border {
-  margin-left: 80px;
-}
 .NosGauge-num-sm {
   color: #4fffa4;
-}
-
-.NosGauge-border {
-  margin-right: 80px;
 }
